fix footer spacing between social icons and logo

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -54,7 +54,7 @@ footer {
 
     .social {
         text-align: center;
-        margin: 20px 0 40px 0;
+        margin: 10px 0 10px 0;
 
         a {
             color: $white;
